# archinstall_zfs

./: .coverage  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  Storage_ZFS_Wizard_Plan.md  TODO.md  archinstall_integration_plan.md  cmd_output.txt  debug_zfs_build.py  dracut_implementation_plan.md  flake.nix  initramfs_architecture.md  iso_builder.py  justfile  main_installation_flow_plan.md  manual_test_commands.md  menu_system_integration_plan.md  mkinitcpio_implementation_plan.md  pyproject.toml  python_code_quality_tools_guide.md  run.sh  validation_core.py  zfs_init.sh  zfs_installer_modification_plan.md
.cargo/: config.toml
.crush/: crush.db-shm  crush.db-wal
.github/docker/ci/: Dockerfile
.github/workflows/: build-iso.yml  build.yml  check.yml  ci-image.yml  ci.yml  rescue-iso.yml
archinstall_zfs/: __init__.py  __main__.py  aur.py  builder.py  config_io.py  installer.py  iso_builder.py  kernel.py  kernel_scanner.py  kernel_simple.py  main.py  shared.py  validation.py  zrepl.py
archinstall_zfs/assets/zed/: history_event-zfs-list-cacher.sh
archinstall_zfs/custom_plugins/: zfs_plugin.py
archinstall_zfs/disk/: __init__.py
archinstall_zfs/initramfs/: base.py  dracut.py  mkinitcpio.py
archinstall_zfs/kernel/: __init__.py  fallback.py  package_manager.py  registry.py  variants.py
archinstall_zfs/menu/: __init__.py  global_config.py  installer.py  models.py  zfs_installer_menu.py
archinstall_zfs/plugins/: zfs.py
archinstall_zfs/storage/: disk.py  dracut.py  zfs.py  zfs_init.py
archinstall_zfs/utils/: __init__.py
archinstall_zfs/zfs/: __init__.py  kmod_setup.py
assets/: history_event-zfs-list-cacher.sh
assets/zed/: history_event-zfs-list-cacher.sh
core/: Cargo.toml
core/benches/: download.rs
core/src/: bootmenu.rs  dataset_layout.rs  iso.rs  lib.rs  metrics.rs  packages.rs  pool_picker.rs  prepare.rs  zfs_cleanup.rs  zfs_keyfile.rs  zfs_setup.rs  zfs_target_files.rs  zfs_trim.rs
core/src/config/: io.rs  mod.rs  types.rs  validation.rs
core/src/disk/: by_id.rs  device.rs  mod.rs  partition.rs
core/src/installer/: aur.rs  autologin.rs  base.rs  fstab.rs  locale.rs  mirrors.rs  mod.rs  network.rs  services.rs  users.rs
core/src/installer/initramfs/: dracut.rs  mkinitcpio.rs
core/src/kernel/: mod.rs  scanner.rs
core/src/profile/: desktop.rs  mod.rs  server.rs
core/src/swap/: mod.rs
core/src/system/: alpm_pacman.rs  async_download.rs  cmd.rs  gpu.rs  mod.rs  net.rs  pacman.rs  sysinfo.rs  wifi.rs
core/src/system/wifi/: iwd.rs  mock.rs  mod.rs  nm.rs
core/src/zfs/: bootmenu.rs  cache.rs  dataset.rs  encryption.rs  kmod.rs  mod.rs  pool.rs
core/tests/: zfs_get_encrypted.json  zfs_get_encryption_off.json  zfs_mount.json
core/tests/fixtures/: zpool_list.json  zpool_status_encrypted.json
core/tests/fixtures/fixtures/: zfs_get_all.json  zpool_get_all.json  zpool_import_text.txt  zpool_status.json
docs/: DEVELOPMENT.md  KERNEL_ARCHITECTURE.md  TODO.md  TODO_PROACTIVE_DKMS_VALIDATION.md  debugging-boot.md  install-bench-results.md  swap-plan.md
gen_iso/: Containerfile  build_zfs_package.py  run-qemu.sh
gen_iso/main_profile/: packages.x86_64  pacman.conf  profiledef.sh
gen_iso/main_profile/syslinux/: archiso_sys-linux.cfg
gen_iso/patches/: zfs-skip-invalid-bp-async-destroy.patch
gen_iso/profile/: packages.x86_64.j2  pacman.conf.j2  profiledef.sh.j2
gen_iso/profile/grub/: grub.cfg  grub.cfg.j2  loopback.cfg  loopback.cfg.j2
gen_iso/profile/syslinux/: archiso_pxe-linux.cfg.j2  (+1 more)
gen_iso/testing_profile/: packages.x86_64  pacman.conf  profiledef.sh
qemu_scripts/: qemu_arch_install.sh  qemu_arch_install_serial.sh  qemu_arch_run.sh  qemu_arch_run_serial.sh
slint-ui/: Cargo.toml
slint-ui/src/: config_items.rs  editing_models.rs  format.rs  install.rs  main.rs  refresh.rs  tracing_layer.rs
slint-ui/src/controllers/: install.rs  lists.rs  mod.rs  quit.rs  welcome.rs  wifi.rs  wizard.rs
slint-ui/ui/: app.slint  styling.slint  types.slint
slint-ui/ui/components/: badge.slint  check-box.slint  config-item.slint  delete-button.slint  icon.slint  progress-bar.slint  radio-dot.slint  sidebar-item.slint  signal-bars.slint  styled-button.slint  styled-text-input.slint
slint-ui/ui/components/internal/: state-layer.slint
slint-ui/ui/popups/: multi-select-popup.slint  package-search-popup.slint  select-popup.slint  string-list-popup.slint  text-input-popup.slint  user-manage-popup.slint  wifi-popup.slint
slint-ui/ui/state/: editing-state.slint  install-state.slint  popup-state.slint  welcome-state.slint  wifi-state.slint  wizard-state.slint
slint-ui/ui/views/: install-view.slint  welcome-view.slint  wizard-view.slint
src/: app.rs  iso.rs  main.rs  zrepl.rs
src/config/: types.rs  validation.rs
src/disk/: mod.rs  partition.rs
src/installer/: aur.rs  base.rs  fstab.rs  locale.rs  mod.rs  network.rs  services.rs  users.rs
src/kernel/: mod.rs  scanner.rs
src/profile/: mod.rs  server.rs
src/swap/: mod.rs
src/system/: cmd.rs  mod.rs  net.rs  pacman.rs  sysinfo.rs
src/tui/: mod.rs  theme.rs
src/zfs/: bootmenu.rs  cache.rs  cli.rs  dataset.rs  encryption.rs  kmod.rs  mod.rs  models.rs  pool.rs
tests/: conftest.py  qemu_full_disk.json  qemu_full_disk_mkinitcpio.json  qemu_integration.rs  test_kernel_scanner.py  test_kernel_simple.py  test_kernel_system.py  test_validation.py  test_validation_core.py  test_zfs.py
tests/download_bench/: README.md  RESULTS.md  docker-compose.yml  generate-packages.sh
tests/fixtures/: zfs_list_all.json
tui/: Cargo.toml
tui/src/: app.rs  main.rs
tui/src/tui/: event.rs  mod.rs  theme.rs  tracing_layer.rs
tui/src/tui/screens/: edit.rs  install_progress.rs  main_menu.rs  mod.rs  package_picker.rs  pickers.rs  select.rs  wifi.rs  wizard.rs
tui/src/tui/screens/steps/: desktop.rs  disk.rs  mod.rs  review.rs  system.rs  users.rs  welcome.rs  zfs.rs
xtask/: Cargo.toml
xtask/configs/: default.json  qemu_full_disk.json  qemu_full_disk_aur.json  qemu_full_disk_kde.json  qemu_full_disk_mkinitcpio.json
xtask/src/: iso.rs  main.rs  qemu.rs
(+34 files in other folders)
