[workspace]
members = ["core", "tui", "slint-ui", "xtask"]
resolver = "3"

# Pin nmrs to upstream master until a crates.io release ships with
# the Send-bound fix for `for_each_access_point` (cachebag/nmrs#330)
# and the stale nmrs-aur gitlink removal. Both are merged to master;
# the latest crates.io release (2.2.0) predates them. Remove this
# patch block and bump core's nmrs version constraint once a new
# release is cut.
[patch.crates-io]
nmrs = { git = "https://github.com/cachebag/nmrs.git", rev = "352f57e" }

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.32"
nix = { version = "0.31.2", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sublime_fuzzy = "0.7.0"
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zxcvbn = "3.1.0"
