[workspace]
members = ["core", "tui", "slint-ui", "xtask"]
exclude = ["third-party/aur-depends", "third-party/wayland-scanner"]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.32"
nix = { version = "0.31.3", features = ["fs"] }
nmrs = "3.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sublime_fuzzy = "0.7.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zxcvbn = "3.1.1"

[patch.crates-io]
# wayland-scanner 0.31.10 uses vulnerable quick-xml 0.39; this narrow local
# patch migrates only the XML parser without taking unreleased generator APIs.
wayland-scanner = { path = "third-party/wayland-scanner" }
