[project]
name = "archinstall-zfs"
version = "0.1.0"
description = ""
authors = [
    {name = "okhsunrog", email = "me@okhsunrog.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "archinstall @ git+https://github.com/archlinux/archinstall.git@3.0.9",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.3",
    "mypy>=1.14.0",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "pytest>=7.0.0",
]

[tool.mypy]
exclude = ['archinstall/.*']
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[tool.pylint.main]
ignore = ['archinstall']
disable = [
    "C",  # Convention warnings
    "R",  # Refactor suggestions
    "import-error",  # E0401
    "no-name-in-module",  # E0611
    "broad-exception-caught",  # W0718
    "raise-missing-from",  # W0707
]

[tool.pylint.format]
max-line-length = 160

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]

[tool.black]
extend-exclude = '''
(
  archinstall/.*
)
'''

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
