[package]
name = "archinstall-zfs-core"
version = "0.4.1"
edition = "2024"

[dependencies]
alpm = "5.0.2"
alpm-utils = "5"
aur-depends = { version = "5.0.0", default-features = false }
aur-fetch = "0.11.3"
blockdev = "0.3.1"
color-eyre.workspace = true
fs_extra = "1.3.0"
futures.workspace = true
hex = "0.4.3"
iwdrs = { version = "0.2.6", default-features = false, features = ["tokio"] }
lzma-rs = "0.3.0"
nix = { workspace = true, features = ["fs", "mount", "process", "signal"] }
pacmanconf = "3.1.0"
raur = { version = "7", default-features = false, features = ["async", "reqwest"] }
regex = "1.12.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
sublime_fuzzy.workspace = true
sysinfo = "0.38.4"
tar = "0.4.45"
thiserror = "2.0.18"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-util", "fs", "sync", "time", "process"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tempfile = "3.27.0"

[[bench]]
name = "download"
harness = false
