[package]
name = "archinstall-zfs-slint"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["linuxkms"]
linuxkms = ["slint/backend-linuxkms-noseat", "slint/renderer-skia-software"]
desktop = ["slint/backend-winit", "slint/renderer-skia"]

[dependencies]
archinstall-zfs-core = { path = "../core" }
clap.workspace = true
color-eyre.workspace = true
crossbeam-channel = "0.5"
nix.workspace = true
slint = { git = "https://github.com/okhsunrog/slint.git", branch = "feat/renderer-skia-software-linuxkms", default-features = false, features = [
    "std",
    "compat-1-2",
] }
sublime_fuzzy.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zxcvbn.workspace = true

[build-dependencies]
slint-build = { git = "https://github.com/okhsunrog/slint.git", branch = "feat/renderer-skia-software-linuxkms" }
