[package]
name = "archinstall-zfs-tui"
version = "0.4.1"
edition = "2024"

[dependencies]
archinstall-zfs-core = { path = "../core" }
clap.workspace = true
color-eyre.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures.workspace = true
nix.workspace = true
ratatui = "0.30.0"
ratatui-macros = "0.7.0"
ratatui-themes = "0.2.0"
ratatui-widgets = "0.3.0"
sublime_fuzzy.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tui-scrollview = "0.6.3"
tui-textarea-2 = "0.10.2"
tui-widget-list = "0.15.2"
zxcvbn.workspace = true
