[package]
name = "archinstall-zfs-tui"
version = "0.4.1"
edition = "2024"

[[bin]]
name = "azfs-tui"
path = "src/main.rs"

[dependencies]
# default-features = false keeps feature unification simple across
# the workspace: core's default (wifi-iwd) is an opinionated choice
# that belongs at the consumer level, not inherited transitively.
# The TUI targets the installer ISO, so it explicitly enables wifi-iwd.
archinstall-zfs-core = { path = "../core", default-features = false, features = ["wifi-iwd"] }
clap.workspace = true
color-eyre.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures.workspace = true
nix.workspace = true
ratatui = "0.30.2"
sublime_fuzzy.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zxcvbn.workspace = true
